--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	</style>
 </head>
 <body>
-	<h1>Home</h1>
+	<h1>The Crescent</h1>
 	<nav>
 		<ul>
 			<li>
-				<a href="index.html">Home</a>
+				<a href="index.html">The Crescent</a>
 			</li>
 					<li>
 				<a href="Second.html">Menu</a>
