--- a/Third.html
+++ b/Third.html
@@ -9,7 +9,7 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="index.html">Home</a>
+				<a href="index.html">The Crescent</a>
 			</li>
 					<li>
 				<a href="Second.html">Menu</a>
