--- a/Second.html
+++ b/Second.html
@@ -43,7 +43,7 @@
 	<p>More egg just on bread this time.</p>
 	<img src="Freach_toast.jpg">
 	<p>We have no clue but we'll figure it out</p>
-	<p>Not french but is definitly toast</p>
+	<p>Not french but is definitely toast</p>
 	<img src="bacon.jpg">
 	<p>.09$</p>
 	<p>Very well done and hard as a rock (comes with the rest of the pig.)</p>
